# pytest-nb-as-test

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  agent_history.md  error.txt  pyproject.toml  pytest.ini  run_demo.py  todo.md
.devcontainer/: Dockerfile  chrome-kaleido  devcontainer.json  fix_permissions.sh  install_uv.sh  post-create.sh
.github/workflows/: ci.yml  release.yml
ci/: check_error_line.sh  check_simple_print_output.sh
pytest_nb_as_test/: item.py  multiprocessing_guard.py  notebook_code.py  options.py  plugin.py  timeout.py
pytest_notebook_test/: __init__.py  plugin.py
tests/: conftest.py  test_plugin.py  test_timeout.py
tests/fixture_testing/add_marker/: conftest.py  test_conftest_marker.ipynb
tests/fixture_testing/is_notebook/: conftest_is_notebook.py  matplotlib.py  test_matplotlib_backend.ipynb  test_regular_backend.py
tests/fixture_testing/raise_error/: conftest_autouse_error.py
tests/notebooks/: conftest.py  example_simple_123.ipynb  hard_async_detection.ipynb  test_async_exec_mode.ipynb  test_asyncio_multiprocessing_pool_spawn_importable_worker.ipynb  test_asyncio_processpool_spawn_importable_worker.ipynb  test_cell_timeout.ipynb  test_default_all_false.ipynb  test_failure.ipynb  test_future_annotations.ipynb  test_future_non_leading_warning.ipynb  test_get_ipython_globals.ipynb  test_glob_filter.ipynb  test_indented_magics.ipynb  test_magics.ipynb  test_main.ipynb  test_main.nbconvert.ipynb  test_mp_fork_top_level_function_async_exec_mode.ipynb  test_multi_cell_syntax.ipynb  test_multiprocessing_local_function.ipynb  test_must_raise.ipynb  test_notebook_timeout.ipynb  test_simple.ipynb  test_skip_all.ipynb  test_sync_exec_mode.ipynb  test_test_cell_override.ipynb  test_trailing_cell_timeout_comment.ipynb  test_trailing_test_cell_comment.ipynb
tests/notebooks/error_cases/: test_cfe_import_path_spawn_guardrail.ipynb  test_cfe_spawn_guardrail.ipynb  test_ctx_process_spawn_guardrail.ipynb  test_failure.ipynb  test_failure_asyncio_processpool_fork_notebook_worker.ipynb  test_failure_asyncio_processpool_spawn_notebook_worker.ipynb  (+12 more)
tools/: check_simple_output.sh  fix_notebook_cell_id.py  nbformat_probe.sh  probe_version_compatability.py  pytest_version_probe.sh  timeout_probe.sh
