[project]
name = "pytest_notrbooks"
version = "0.1.0"
description = "Lightweight starter template for Python applications and libraries."
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Bryce Henson", email = "you@example.com" },
]
dependencies = [
    "numpy>=2.3.4,<3.0.0",
    "matplotlib>=3.10.7,<4.0.0",
    "scipy==1.16.2",
    "lmfit>=1.3.4,<2.0.0",
    "plotly>=6.5.0,<7.0.0",
    "kaleido==1.2.0",
    "nbformat>=5.10.4,<6.0.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "ipykernel>=7.0.1,<8.0.0",
    "ipywidgets==8.1.7",
    "jupyterlab-widgets==3.0.15",
    "numdifftools>=0.9.42,<0.10.0",
    "tqdm>=4.67.1,<5.0.0",
    "anywidget>=0.9.21,<0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "black[jupyter]==25.9.0",
    "isort==7.0.0",
    "pytest-cov==4.1.0",
    "pytest-timeout>=2.3.1,<3.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "pyinstrument>=5.1.1,<6.0.0",
    "nbconvert>=7.16.6,<8.0.0",
    "pyright==1.1.407"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pytest_notebook_test"]

[tool.isort]
profile = "black"
