[project]
name = "pytest-notebooks"
version = "0.1.0"
description = "Lightweight starter template for Python applications and libraries."
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Bryce Henson", email = "you@example.com" },
]
dependencies = [
    "pytest>=8.4.2,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "black[jupyter]==25.9.0",
    "isort==7.0.0",
    "pylint==4.0.4",
    "pytest-cov==4.1.0",
    "pytest-timeout>=2.3.1,<3.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "pyinstrument>=5.1.1,<6.0.0",
    "nbformat>=5.10.4,<6.0.0",
    "nbconvert>=7.16.6,<8.0.0",
    "pyright==1.1.407"
]

[project.entry-points.pytest11]
pytest_notebook_test = "pytest_notebook_test.plugin"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pytest_notebook_test"]

[tool.isort]
profile = "black"
